--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\WellDone\Documents\Icons & cursors\color-icons\navy.ico,0
+IconResource=C:\Users\WellDone\Documents\Icons & cursors\color_icons\space.ico,0
 [ViewState]
 Mode=
 Vid=
